--- a/src/components/Background/Background.scss
+++ b/src/components/Background/Background.scss
@@ -117,6 +117,55 @@
     to {transform: translateX(0)}
 }
 
+.raining {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -2;
+
+    .rain {
+        position: absolute;
+        width: 1px;
+        height: 50px;
+        // background: white;
+        background: linear-gradient(to bottom, rgba(255,255,255,0) 0%, blue 100%);
+        // z-index: -5;
+    }
+
+    $rain: 50;
+    
+    @for $i from 1 through $rain {
+        $top: (random(50) + 50) * 1%;
+        $left: random(100) * 1%;
+        $opacity: (random(30) + 30) * 0.01;
+        $delay: random(20) -1s;
+
+        .rain:nth-of-type(#{$i}) {
+            animation-name: rain-#{$i};
+            animation-delay: $delay;
+            animation-duration: random(6) + 4s;
+            animation-iteration-count: infinite;
+            left: $left;
+            opacity: $opacity;
+            top: -$top;
+        }
+
+        @keyframes rain-#{$i} {
+            0% {
+                left: $left;
+                opacity: $opacity;
+                top: -$top;
+            }
+            100% {
+                opacity: 0;
+                top: $top + 40%;
+            }
+        }
+    }
+}
+
 .night {
     background: linear-gradient(to bottom, #131862, #2e4482, #546bab, #87889c, #bea9de);
     animation: fade_in 2s;
