--- a/src/App.scss
+++ b/src/App.scss
@@ -126,8 +126,86 @@ body {
     grid-area: header;
 
     .title {
+        margin-top: 21px;
         text-shadow: 1px 1px 2px black;
         font-family: Copperplate, Copperplate Gothic Light, fantasy;
+
+        &Rain {
+            position: relative;
+            margin: 0 3px 0 3px;
+            color: rgb(12, 94, 218);
+            text-decoration: underline;
+
+            &Drops {
+                position: absolute;
+                width: 1px;
+                height: 5px;
+                background: linear-gradient(to bottom, rgba(255, 255, 255,0) 0%, blue 100%);
+            }
+
+            $precip: 5;
+    
+            @for $i from 1 through $precip {
+                $left: random(100) * 1%;
+                $opacity: (random(30) + 30) * 0.01;
+                $delay: random(10) - 1s;
+
+                &Drops:nth-of-type(#{$i}) {
+                    animation-name: rain_or_snow_#{$i};
+                    animation-delay: $delay;
+                    animation-duration: 2s;
+                    animation-iteration-count: infinite;
+                    left: $left;
+                    opacity: $opacity;
+                    top: 15px;
+                }
+
+                @keyframes rain_or_snow_#{$i} {
+                    0% {
+                        left: $left;
+                        opacity: $opacity;
+                        top: 15px;
+                    }
+                    100% {
+                        opacity: 0;
+                        top: 30px;
+                    }
+                }
+            }
+        }
+
+        &Shine {
+            margin-left: 3px;
+            position: relative;
+            color: rgb(250,250,72);
+            text-decoration: overline;
+
+            &:before {
+                content: "";
+                position: absolute;
+                height: 10px;
+                width: 20px;
+                top: -12px;
+                right: 0;
+                border-top-left-radius: 20px;
+                border-top-right-radius: 20px;
+                box-shadow: 0px 0px 0px 0px rgba(254, 204, 96, 0.4);  
+                background: linear-gradient(to top, #FF9671, #FFC75F, #F9F871);
+                animation: pulse 4s infinite;
+            }
+
+            @keyframes pulse {
+                0% {
+                    box-shadow: 0 0 0 0 rgba(254, 204, 96, 0.4);
+                }
+                70% {
+                      box-shadow: 0 0 0 10px rgba(254, 204, 96, 0);
+                }
+                100% {
+                      box-shadow: 0 0 0 0 rgba(254, 204, 96, 0);
+                }
+            }
+        }
     }
     
     .scrollingText {
